--- a/style.css
+++ b/style.css
@@ -5,43 +5,88 @@
     font-family: 'poppins', sans-serif;
     font-size: 18px;
 }
-body{
+/* body{
     margin: 4vh;
-}
+} */
 .container{
     display: flex;
-    align-items: center;
+    /* width: 70%; */
+    margin-bottom: 30px;
+    /* align-items: center; */
     justify-content: space-between;
 }
-/*.sidebar{
-    width: 25%;
-    border: apx solid #eee;
+.cart{
+    display: flex;
+    background-color: #aaa;
+    margin: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 7px 10px;
     border-radius: 3px;
+    width: 80px;
+}
+.cart p{
+    height: 22px;
+    width: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 22px;
+    background-color: #333;
+    color: black;
+}
+.sidebar{
+    width: 40%;
+    border: solid #eee;
+    border-radius: 3px;
+    margin-left: 20px;
+    text-align: center;
     padding: 15vh;
-    height: 50vh;
+    height: 100vh;
     box-shadow: 0px 0px 8px grey;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}*/
+}
+.head{
+    background-color: #333;
+    border-radius: 3px;
+    height: 40px;
+    padding: 10px;
+    margin-bottom: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+.foot{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+    padding: 10px 0;
+    border-top: 1px solid #333;
+}
 .data{
-    width: 73%;
+    width: 10% 10%;
+    left: 10px;
+    margin: 10px;
     border-radius: 3px;
     overflow-y: auto;
 }
-.fa-circle{
+/* .fa-circle{
     color: orangered;
-}
+} */
 .searchbar{
-    width: 100%;
-    background-color: #eee;
+    width: 70%;
+    right: 0;
+    /* background-color: #eee; */
     border-radius: 3px;
-    padding: 9px;
+    margin: 5px;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-input{
+/* input{
     border: none;
     outline: none;
     background: none;
@@ -63,7 +108,7 @@ input{
 }
 .fa-brands:hover{
     color: orangered;
-}
+} */
 .top{
     height: 60px;
     border-radius: 3px;
@@ -88,7 +133,7 @@ input{
     color: white;
 }
 #root{
-    width: 100%;
+    width: 60%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
@@ -143,6 +188,34 @@ button{
 }
 button:hover{
     background-color: orangered;
+}
+.cart-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: white;
+    border-bottom: 1px solid #aaa;
+    border-radius: 3px;
+    margin: 10px 10px;
+}
+.row-ing{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border: 1px solid goldenrod;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.rowing{
+    max-width: 43px;
+    max-height: 43px;
+    border-radius: 50%;
+}
+.fa-trash:hover{
+    cursor: pointer;
+    color: #333;
 }
 ::-webkit-scrollbar{
     display: none;
