--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 22px;
-    background-color: #333;
+    background-color: #fff;
     color: black;
 }
 .sidebar{
@@ -58,6 +58,21 @@
     display: flex;
     align-items: center;
 }
+ .form{
+    font-size: 50px;
+    margin: 5px;
+ }
+ .form label{
+    font-size: 20px;
+ }
+ .form input{
+    font-size: 30px;
+    border: 2px solid gray;
+ }
+ .list{
+    font-size: 30px;
+    margin: 5px;
+ }
 .foot{
     display: flex;
     justify-content: space-between;
@@ -78,6 +93,7 @@
 .searchbar{
     width: 100%;
     right: 10px;
+    font-size: 20px;
     border-radius: 3px;
     margin: 5px;
     padding: 20px;
@@ -95,96 +111,69 @@
     justify-content: space-between;
     padding: 15px;
 }
-.header{
-    height: 90px;
-    border-radius: 3px;
-    background-color: #333;
-    margin: 3vh 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.header p{
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-}
 #root{
-    width: 30%;
-    height: 20%;
+    width: 40%;
+    height: 30%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 5px;
+    grid-gap: 8px;
 }
 .box{
-    margin: 1px;
+    margin: 3px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid #333;
+    border: 4px solid #333;
     border-radius: 5px;
-    height: 160px;
+    height: 350px;
+    width: 340px;
 }
+
+h2{
+    font-size: 20px;
+    color: orangered;
+    margin: 2px;
+}
+p{
+    font-size: 20px;
+    margin: 2px;
+}
+
 .img-box{
-    width: 105px;
-    height: 115px;
+    width: 23vh;
+    height: 200vh;
+    margin-top: 10px;
+    padding: 5px 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    perspective: 1000px; /* adds depth to the image */
-    /* transform-style: preserve-3d; /* allows 3D transformations */
-    /* transition: transform 0.5s; */
-    /* transform: translateZ(20px) scale(1.1);  */ 
 }
-/* CSS */
-.floating-image {
-    perspective: 1000px; /* adds depth to the image */
-    transform-style: preserve-3d; /* allows 3D transformations */
-    transition: transform 0.5s; /* smooth transition effect */
-  }
-  
-  .floating-image:hover {
-    transform: translateZ(20px) scale(1.1); /* moves the image 20px forward and scales it up */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* adds a subtle shadow */
-  }
 .images{
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 90%;
+    max-height: 100%;
     object-fit: cover;
     object-position: center;
 
 }
 .bottom{
-    width: 100%;
+    width: 90%;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5px;
-    font-size: 10px;
+    margin: 1px;
+    font-size: 20px;
     justify-content: space-between;
 }
-/* #cartItem{
-    width: 50%;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 5px;
-} */
-h2{
-    font-size: 10px;
-    color: orangered;
-}
-p{
-    font-size: 10px;
-}
+
 button{
     width: 100%;
     position: relative;
     border: none;
     border-radius: 10px;
     background-color: #333;
-    font-size: 10px;
+    font-size: 20px;
     padding: 2px 3px;
     cursor: pointer;
     color: white;
@@ -203,8 +192,8 @@ button:hover{
     margin: 10px 10px;
 }
 .row-ing{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     border-radius: 30px;
     border: 1px solid goldenrod;
     display: flex;
@@ -212,8 +201,8 @@ button:hover{
     justify-content: center;
 }
 .rowing{
-    max-width: 40px;
-    max-height: 40px;
+    max-width: 80px;
+    max-height: 60px;
     border-radius: 40%;
 }
 .fa-trash:hover{
